--- a/src/App.css
+++ b/src/App.css
@@ -4,15 +4,31 @@
   padding: 0;
   /* box-sizing: border-box; */
 }
+html, body {
+  background-color: transparent;
+}
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: transparent;
 }
 
 .app-container {
   margin: 0 auto;
   padding: 30px;
   display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  top: 0;
+  
+  user-select: none;
+  -webkit-user-select: none;
   /* flex-direction: column; */
   /* gap: 20px; */
   /* background: linear-gradient(135deg, rgba(15, 20, 25, 0.5) 0%, rgba(30, 35, 40, 0.5) 50%, rgba(60, 60, 65, 0.5) 100%); */
@@ -24,6 +40,7 @@ body {
   border-radius: 20px;
   font-weight: 600;
   text-transform: uppercase;
+  border: 1px solid #ffc107;
   font-size: 0.9rem;
 }
 
